--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -2506,7 +2506,6 @@ span.tag a {
 /** Tabs **/
 ul.bar_tabs {
   overflow: visible;
-  background: #F5F7FA;
   height: 25px;
   margin: 21px 0 14px;
   padding-left: 14px;
@@ -2525,8 +2524,6 @@ ul.bar_tabs > li {
   border-radius: 4px 4px 0 0;
 }
 ul.bar_tabs > li.active {
-  border-right: 6px solid #D3D6DA;
-  border-top: 0;
   margin-top: -15px;
 }
 ul.bar_tabs > li a {
@@ -2540,6 +2537,7 @@ ul.bar_tabs > li a:hover {
 }
 ul.bar_tabs > li.active a {
   border-bottom: none;
+  border: 0 !important;
 }
 ul.bar_tabs.right {
   padding-right: 14px;
